[workspace]
members = [
    "foundations",
    "foundations-macros",
    "examples",
    "tools/gen-syscall-enum"
]
resolver = "2"

[workspace.package]
version = "4.4.2"
repository = "https://github.com/cloudflare/foundations"
edition = "2021"
authors = ["Cloudflare"]
license = "BSD-3-Clause"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[profile.release]
debug = 1

[workspace.dependencies]
anyhow = "1.0"
foundations = { version = "4.4.2", path = "./foundations" }
foundations-macros = { version = "4.4.2", path = "./foundations-macros", default-features = false }
bindgen = { version = "0.71", default-features = false }
cc = "1.0"
cf-rustracing = "1.1"
cf-rustracing-jaeger = "1.1"
clap = "4.4"
darling = "0.20"
erased-serde = "0.4"
futures-util = "0.3"
governor = "0.6"
hyper = { version = "0.14", default-features = false }
indexmap = "2.0"
ipnetwork = { version = "0.21", features = ["serde"] }
libc = "0.2"
once_cell = "1.5"
tonic = { version = "0.11", default-features = false }
opentelemetry-proto = "0.5"
parking_lot = "0.12"
proc-macro2 = { version = "1", default-features = false }
prometheus = { version = "0.13", default-features = false }
prometheus-client = "0.18"
prometools = "0.2"
rand = "0.9"
percent-encoding = "2.3"
quote = "1"
regex = "1.8"
reqwest = { version = "0.12", default-features = false }
socket2 = { version = "0.5", features = [ "all" ] }
syn = "2"
serde = "1"
serde_path_to_error = "0.1"
serde_yaml = "0.8"
serde_with = "3.3"
slab = "0.4"
slog = "2.7"
slog-async = "2.3"
slog-json = "2.3"
slog-term = "2.4"
tempfile = "3.7"
tokio = "1.41"
thread_local = "1.1"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
yaml-merge-keys = { version = "0.5", features = ["serde_yaml"] }

# needed for minver
async-stream = "0.3"
local-ip-address = "0.6"
lock_api = "0.4"
log = "0.4"
neli = "0.6"
neli-proc-macros = "0.1"
nix = "0.30"
parking_lot_core = "0.9"
thiserror = "2.0"
