[workspace]
members = [
    "foundations",
    "foundations-macros",
    "examples",
    "tools/gen-syscall-enum",
]
resolver = "2"

[workspace.package]
version = "5.4.0"
repository = "https://github.com/cloudflare/foundations"
edition = "2021"
authors = ["Cloudflare"]
license = "BSD-3-Clause"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[profile.release]
debug = 1

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(foundations_generic_telemetry_wrapper)',
    'cfg(foundations_unstable)',
    'cfg(tokio_unstable)',
    # for docs.rs builds only
    'cfg(foundations_docsrs)',
    # slog feature
    'cfg(integer128)',
]

[workspace.dependencies]
anyhow = "1.0.75"
foundations = { version = "5.4.0", path = "./foundations" }
foundations-macros = { version = "=5.4.0", path = "./foundations-macros", default-features = false }
bindgen = { version = "0.72", default-features = false }
cc = "1.0"
cf-rustracing = "1.2.1"
cf-rustracing-jaeger = "1.2.2"
clap = "4.4"
crossbeam-utils = { version = "0.8", default-features = false }
darling = "0.21"
erased-serde = "0.4"
futures-util = "0.3"
governor = "0.6"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
indexmap = "2.0"
ipnetwork = { version = "0.21", features = ["serde"] }
libc = "0.2"
once_cell = "1.5"
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14" }
opentelemetry-proto = "0.31"
parking_lot = "0.12"
pin-project-lite = "0.2.16"
proc-macro2 = { version = "1", default-features = false }
prometheus = { version = "0.14", default-features = false }
prometheus-client = "0.18"
prometools = "0.2.3"
rand = "0.9"
percent-encoding = "2.3"
quote = "1"
regex = "1.8"
reqwest = { version = "0.12", default-features = false }
socket2 = { version = "0.5", features = ["all"] }
syn = "2"
serde = "1"
serde_path_to_error = "0.1.17"
serde_yaml = "0.8.26"
serde_with = "3.3"
slab = "0.4.7"
slog = "2.7"
slog-async = "2.3"
slog-json = "2.3"
slog-term = "2.4"
tempfile = "3.7"
tokio = "1.41.0"
thread_local = "1.1"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
tower-service = "0.3"
tracing-slog = "0.3.0"
tracing-subscriber = "0.3"
yaml-merge-keys = { version = "0.5", features = ["serde_yaml"] }

# needed for minver
async-stream = "0.3"
local-ip-address = "0.6.5"
lock_api = "0.4.7"
log = "0.4.27"
neli = "0.6.5"
neli-proc-macros = "0.1.4"
nix = "0.30"
parking_lot_core = "0.9.2"
thiserror = "2.0.12"
tower = "0.5.2"
