[workspace]
members = [
    "foundations",
    "foundations-macros",
    "examples",
    "tools/gen-syscall-enum",
]
resolver = "3"

[workspace.package]
version = "5.6.5"
repository = "https://github.com/cloudflare/foundations"
edition = "2024"
authors = ["Cloudflare"]
license = "BSD-3-Clause"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[profile.release]
debug = 1

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(foundations_generic_telemetry_wrapper)',
    'cfg(foundations_unstable)',
    'cfg(tokio_unstable)',
    # for docs.rs builds only
    'cfg(foundations_docsrs)',
    # slog feature
    'cfg(integer128)',
]

[workspace.dependencies]
anyhow = "1.0.102"
backtrace = "0.3.76"
foundations = { version = "5.6.5", path = "./foundations" }
foundations-macros = { version = "=5.6.5", path = "./foundations-macros", default-features = false }
bindgen = { version = "0.72.1", default-features = false }
cc = "1.2.61"
cf-rustracing = "1.3.0"
cf-rustracing-jaeger = "1.3.0"
clap = "4.6.1"
crossbeam-utils = { version = "0.8.21", default-features = false }
darling = "0.23.0"
erased-serde = "0.4.10"
futures-util = "0.3.32"
governor = "0.10.4"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }
indexmap = "2.14.0"
ipnetwork = { version = "0.21.1", features = ["serde"] }
libc = "0.2.186"
nix = "0.31.2"
once_cell = "1.21.4"
tonic = { version = "0.14.5", default-features = false }
tonic-prost = "0.14.5"
opentelemetry-proto = "0.31.0"
parking_lot = "0.12.5"
pin-project-lite = "0.2.17"
proc-macro2 = { version = "1.0.106", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
prometheus-client = "0.18.1"
prometools = "0.2.3"
rand = "0.10.1"
percent-encoding = "2.3.2"
quote = "1.0.45"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
socket2 = { version = "0.6.3", features = ["all"] }
syn = "2.0.117"
serde = "1.0.228"
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde-saphyr = { version = "0.0.25", default-features = false, features = ["deserialize", "serialize"] }
serde_yaml = "0.8.26"
yaml-merge-keys = { version = "0.5.1", features = ["serde_yaml"] }
serde_with = "3.18.0"
slab = "0.4.12"
slog = "2.8.2"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.2"
tempfile = "3.27.0"
tokio = "1.52.1"
thread_local = "1.1.9"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = "0.6.1"
tower-service = "0.3.3"
tracing-slog = "0.4.0"
tracing-subscriber = "0.3.23"
sentry-core = { version = "0.36.0", default-features = false }
sentry = { version = "0.36.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "ureq",
    "rustls",
] }
zeroize = "1.8.2"

# needed for minver
ahash = "0.8.12"
annotate-snippets = "0.12.15"
# `slog-term` 2.9.2 declares `chrono = "^0.4"` but uses APIs (`fixed_offset`, `to_utc`) added
# in 0.4.33. Without a floor >= 0.4.33, `cargo update -Z minimal-versions` picks chrono 0.4.20
# and the minver CI job fails compiling slog-term.
chrono = "0.4.44"
encoding_rs_io = "0.1.7"
local-ip-address = "0.6.12"
lock_api = "0.4.14"
log = "0.4.29"
neli = "0.7.4"
neli-proc-macros = "0.2.2"
parking_lot_core = "0.9.12"
thiserror = "2.0.18"
tower = "0.5.3"
