[package]
name = "bedrock-macros"
version = "1.0.1"
edition = "2021"
publish = ["cloudflare"]
description = "Procedural macros used by bedrock."
repository = "https://bitbucket.cfdata.org/projects/OXY/repos/bedrock"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
bedrock = { workspace = true }
