[package]
name = "bedrock-macros"
description = "Procedural macros used by bedrock."
version = { workspace = true }
edition= { workspace = true }
publish= { workspace = true }
repository= { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
