[package]
name = "bedrock"
version = "1.0.0"
edition = "2021"

[features]
# Default set of features.
default = [
    "platform-common-default", 
    "seccomp"
]

# All non platform-specific features
platform-common-default = [
    "settings", 
    "telemetry", 
    "testing"
]

# Enables serializable documented settings functionality.
settings = [
    "dep:bedrock-macros", 
    "dep:serde", 
    "dep:serde_yaml", 
    "dep:yaml-merge-keys", 
    "dep:serde_path_to_error"
]

# Enables all the telemetry-related features ("logging", "tracing").
telemetry = [
    "logging", 
    "tracing"
]

# Enables logging functionality.
logging = [
    "dep:slog", 
    "dep:slog-async", 
    "dep:slog-json", 
    "dep:slog-term", 
    "dep:thread_local", 
    "dep:parking_lot", 
    "dep:once_cell"
]

# Enables distributed tracing functionality.
tracing = [
    "dep:crossbeam-channel", 
    "dep:rustracing", 
    "dep:rustracing_jaeger", 
    "dep:thread_local", 
    "dep:parking_lot", 
    "dep:once_cell",
    "dep:rand",
    "dep:bedrock-macros"
]

seccomp = [
    "dep:bindgen",
    "dep:cc",
    "dep:once_cell"
]

# Enables testing-related functionality.
testing = [
    "dep:bedrock-macros"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { workspace = true }
bedrock-macros = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rustracing = { workspace = true, optional = true }
rustracing_jaeger = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
slog = { workspace = true, optional = true }
slog-async = { workspace = true, optional = true }
slog-json = { workspace = true, optional = true }
slog-term = { workspace = true, optional = true }
thread_local = { workspace = true, optional = true }
yaml-merge-keys = { workspace = true, optional = true }

[dev-dependencies]
rusty-hook = { workspace = true }
tokio = { workspace = true }

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64")))'.build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }

