[package]
name = "examples"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dev-dependencies]
anyhow = { workspace = true }
foundations = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "http_server"
path = "http_server/main.rs"
