[package]
name = "foundations-macros"
description = "Procedural macros used by foundations."
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[package.metadata.release]
shared-version = "foundations"
tag-prefix = ""
tag-message = "Release foundations version {{version}}"

[features]
default = ["settings_deny_unknown_fields_by_default"]
settings_deny_unknown_fields_by_default = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
