[package]
name = "foundations-metrics-registry"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
tempfile = { workspace = true }
