[package]
name = "foundations-metrics"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
foundations-metrics-registry = { workspace = true }
prometheus-client = { version = "0.25.0", features = [
    "prometheus_protobuf",
    "protobuf-protox",
] }
serde = { workspace = true, features = ["derive"] }
ryu = "1.0.23"
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[lints]
workspace = true
